creates landing page

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
       name="description"
       content="CV Application Builder"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;1,300&display=swap" rel="stylesheet"> 
     <title>CV Application Builder</title>
   </head>
   <body>
